# random-quote-generator-felix

./: .run_checks  pyproject.toml
.github/workflows/: branch.yaml
docs/: conf.py  index.rst
tests/: test_get_quote.py
