[tool.poetry]
name = "random-quote-generator-felix"
version = "0.1.0"
description = "python setup test"
authors = ["Felix <felix.schned@aon.at>"]

[tool.poetry.dependencies]
python = ">3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
